--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   freezed: ^2.3.5
   build_runner: ^2.4.5
+  riverpod_generator:
 
 flutter:
   uses-material-design: true
