--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
     version: ^0.0.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
