--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
     sdk: flutter
     version: ^0.0.0
   shared_preferences: ^2.2.0
+  collection: ^1.17.1
 
 dev_dependencies:
   flutter_test:
