--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   collection: ^1.17.1
   step_progress_indicator: ^1.0.2
   percent_indicator: ^4.2.3
+  syncfusion_flutter_sliders: ^22.2.5
 
 dev_dependencies:
   flutter_test:
